[gd_scene load_steps=6 format=3 uid="uid://o0uibaj8yan6"]

[ext_resource type="Script" path="res://cannon.gd" id="1_3okvj"]
[ext_resource type="SpriteFrames" uid="uid://caoj267hfnni3" path="res://Canon Base.tres" id="1_ul14q"]
[ext_resource type="SpriteFrames" uid="uid://k83jl3d7d7m1" path="res://Canon Head.tres" id="2_n4oan"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cdnij"]
radius = 18.0278

[sub_resource type="CircleShape2D" id="CircleShape2D_25yok"]
radius = 50.0

[node name="Cannon" type="Node2D"]
script = ExtResource("1_3okvj")

[node name="Base" type="Node2D" parent="."]

[node name="BaseStates" type="AnimatedSprite2D" parent="Base"]
scale = Vector2(0.5, 0.5)
sprite_frames = ExtResource("1_ul14q")
animation = &"Good"

[node name="Head" type="Node2D" parent="."]

[node name="Canon States" type="AnimatedSprite2D" parent="Head"]
z_index = 3
rotation = 0.539423
scale = Vector2(0.7, 0.7)
sprite_frames = ExtResource("2_n4oan")
animation = &"Good"
frame_progress = 0.933956
offset = Vector2(0, -10)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CircleShape2D_cdnij")

[node name="Radius of sight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Radius of sight"]
shape = SubResource("CircleShape2D_25yok")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Firerate" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Radius of sight" to="." method="_on_radius_of_sight_body_entered"]
[connection signal="timeout" from="Firerate" to="." method="_on_firerate_timeout"]
